# ai-platform

./: .env.docker  .env.local  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.workers  README.md  api_entrypoint.sh  docker-compose.yml  pyproject.toml  worker_entrypoint.sh
ai_platform/: utils.py
ai_platform/api/: main.py
ai_platform/api/public/image_tasks/: router.py
ai_platform/api/public/images/: router.py
ai_platform/config/: __init__.py
ai_platform/domain/image_repository/: use_cases.py
ai_platform/domain/image_tasks/: models.py  use_cases.py
ai_platform/domain/images/: models.py  use_cases.py
ai_platform/domain/task_queues/: models.py  use_cases.py
ai_platform/sandbox/: images_creation.py
ai_platform/task_queue/: images_creation.py  main.py  testing_cuda.py
scripts/: worker_entrypoint.sh  worker_initialize.sh
